@@ -22,7 +22,7 @@ public abstract class AnalysisExecutionSupport extends AbstractDaoService {
       AnalysisFile execFile = new AnalysisFile();
       execFile.setFileName("runAnalysis.R");
       String[] paramNames = {"packageFile", "packageName", "analysisDir"};
-      String[] paramValues = {packageFilename, packageName, String.format("analysis_%d", analysisId)};
+      String[] paramValues = {packageFilename, packageName, "analysis_%d".formatted(analysisId)};
       // renderSql is used to replace template params with actual values in the R script template
       String script = SqlRender.renderSql(getExecutionScript(), paramNames, paramValues);
       execFile.setContents(script.getBytes());
