@@ -45,6 +45,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.core.convert.ConversionService;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
@@ -54,8 +55,8 @@ import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.support.TransactionCallback;
 import org.springframework.transaction.support.TransactionTemplate;
 
-import javax.ws.rs.BadRequestException;
-import javax.ws.rs.ForbiddenException;
+import jakarta.ws.rs.BadRequestException;
+import jakarta.ws.rs.ForbiddenException;
 import java.io.File;
 import java.io.IOException;
 import java.sql.ResultSet;
@@ -143,6 +144,7 @@ public abstract class AbstractDaoService extends AbstractAdminService {
   @Autowired
   private SourceHelper sourceHelper;
 
+  @Lazy
   @Autowired
   private TagService tagService;
 
@@ -368,7 +370,7 @@ public abstract class AbstractDaoService extends AbstractAdminService {
       Tag tag = tagService.getById(tagId);
       if (Objects.nonNull(tag)) {
         if (tag.isPermissionProtected() && !hasPermissionToAssignProtectedTags(entity, "post")) {
-          throw new UnauthorizedException(String.format("No permission to assign protected tag '%s' to %s (id=%s).",
+          throw new UnauthorizedException("No permission to assign protected tag '%s' to %s (id=%s).".formatted(
                   tag.getName(), entity.getClass().getSimpleName(), entity.getId()));
         }
 
@@ -394,7 +396,7 @@ public abstract class AbstractDaoService extends AbstractAdminService {
       Tag tag = tagService.getById(tagId);
       if (Objects.nonNull(tag)) {
         if (tag.isPermissionProtected() && !hasPermissionToAssignProtectedTags(entity, "delete")) {
-          throw new UnauthorizedException(String.format("No permission to unassign protected tag '%s' from %s (id=%s).",
+          throw new UnauthorizedException("No permission to unassign protected tag '%s' from %s (id=%s).".formatted(
                   tag.getName(), entity.getClass().getSimpleName(), entity.getId()));
         }
         Set<Tag> tags = entity.getTags().stream()
