@@ -20,11 +20,12 @@ import org.ohdsi.webapi.Constants;
 import org.ohdsi.webapi.shiro.PermissionManager;
 import org.ohdsi.webapi.shiro.tokens.JwtAuthToken;
 import org.pac4j.core.profile.CommonProfile;
+import org.pac4j.core.profile.UserProfile;
 
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.ServletRequest;
+import jakarta.servlet.ServletResponse;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.net.URL;
 import java.security.interfaces.ECPublicKey;
 import java.text.ParseException;
@@ -66,8 +67,8 @@ public class GoogleIapJwtAuthFilter extends AtlasAuthFilter {
         String jwtToken = getJwtToken(request);
         String login = verifyJwt(
                 jwtToken,
-                String.format(
-                        "/projects/%s/global/backendServices/%s",
+                
+                        "/projects/%s/global/backendServices/%s".formatted(
                         Long.toUnsignedString(cloudProjectId), Long.toUnsignedString(backendServiceId)
                 )
         );
@@ -87,9 +88,9 @@ public class GoogleIapJwtAuthFilter extends AtlasAuthFilter {
             final PrincipalCollection principals = SecurityUtils.getSubject().getPrincipals();
             final Pac4jPrincipal pac4jPrincipal = principals.oneByType(Pac4jPrincipal.class);
             if (Objects.nonNull(pac4jPrincipal)) {
-                CommonProfile profile = pac4jPrincipal.getProfile();
-                login = profile.getEmail();
-                name = Optional.ofNullable(profile.getDisplayName()).orElse(login);
+                UserProfile profile = pac4jPrincipal.getProfile();
+                login = profile.getAttribute("email").toString();
+                name = Optional.ofNullable(profile.getAttribute("display_name").toString()).orElse(login);
             } else {
                 name = (String) principals.getPrimaryPrincipal();
                 login = name;
